# clickhouse-wasm-udf-rs

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/src/: parse509.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: buffer.rs  host_api.rs  lib.rs
