[workspace]
members = ["macros", "examples"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
homepage = "https://clickhouse.com/"
repository = "https://github.com/vdimir/chwasmudf"

[package]
name = "clickhouse-wasm-udf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "SDK for writing ClickHouse WASM UDFs in Rust"
readme = "README.md"
keywords = ["clickhouse", "wasm", "udf", "webassembly"]
categories = ["wasm", "database"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clickhouse-wasm-udf-macros = { path = "macros", version = "0.1.0" }
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
