[package]
name = "clickhouse-wasm-udf-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Procedural macros for clickhouse-wasm-udf"
readme = "README.md"
keywords = ["clickhouse", "wasm", "udf", "macros"]
categories = ["wasm", "database"]

[dependencies]
syn = { version = "2.0.77", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.86"

[lib]
proc-macro = true
